--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>Copyright @Phani. made with <i class="fa-solid fa-heart"></i> by Easy Tutorials</p>
+            <p>Copyright @Phani. made with <i class="fa-solid fa-heart"></i></p>
         </div>
     </div>
     <script>
